--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -106,6 +106,8 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+  align-items: center;
+  display: flex;
 }
 
 @media (max-width: 600px) {
@@ -126,4 +128,8 @@
   .logo img {
     filter: invert(1);
   }
+}
+
+.erro{
+    color: green;
 }
